<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/jet"
    android:id="@+id/signupcontent"
    tools:context=".SignUp">

    <TextView
        android:id="@+id/textViewinscription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="24dp"
        android:text="@string/Inscription"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/grey"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/grey" />

    <Spinner
        android:id="@+id/cities"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="24dp"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        android:hint="@string/select_city"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/grey"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="@color/grey" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/grey"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/grey" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/grey"
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:textColor="@color/white"
        android:textColorHint="@color/grey" />

    <TextView
        android:id="@+id/acc_type_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/account_type"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/acc_type_rb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/particular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/acc_particular"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/pro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/acc_professional"
            android:textColor="@color/white" />
    </RadioGroup>

    <Button
        android:id="@+id/signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="24dp"
        android:backgroundTint="@color/pinkpurple"
        android:text="@string/signUp"
        android:textAllCaps="false"
        android:textColor="@color/white" />


</LinearLayout>