<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailArticle">
    
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/detailToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_bias="0.0"
        android:background="@color/pinkpurple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/Item_details"/>

    <ImageView
        android:id="@+id/detailImage"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailToolbar"/>

    <TextView
        android:id="@+id/detailPrix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Price"
        android:textColor="@color/jet"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailImage"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        />

    <TextView
        android:id="@+id/detailTitleDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Description"
        android:textStyle="bold"
        android:textColor="@color/jet"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailPrix"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/detailDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/detail_description"
        android:textColor="@color/jet"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailTitleDescription" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/detailButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@color/pinkpurple"
        android:text="@string/Call"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="35dp" />


</androidx.constraintlayout.widget.ConstraintLayout>