<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragmentcontainer"
    tools:context=".FragmentTab3">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/jet">

        <Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/pinkpurple"/>
        <TextView
            android:id="@+id/textTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="24dp"
            android:text="@string/about_this_App"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="80dp"
            android:layout_marginRight="24dp"
            android:backgroundTint="@color/grey"
            android:text="@string/detail_description"
            android:textColor="@color/white"
            android:textSize="15dp" />


        <Button
            android:id="@+id/btn3"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="80dp"
            android:backgroundTint="@color/pinkpurple"
            android:text="@string/i_do_not_have_an_account"
            android:textAllCaps="false"
            android:textColor="@color/white" />
    </LinearLayout>

</FrameLayout>