<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".FragmentTab1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/searchBox"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:drawableLeft="@drawable/ic_baseline_search_24"
            android:drawablePadding="5dp"
            android:elevation="2dp"
            android:hint="@string/search" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/Items"
            android:textSize="20dp"
            android:textColor="@color/jet"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/productsBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

        </androidx.recyclerview.widget.RecyclerView>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/pinkpurple"
            android:layout_marginTop="30dp">

        <ImageView
            android:id="@+id/imagefirstpage"
            android:layout_marginLeft="20dp"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/interaction"/>

        <TextView
            android:id="@+id/sologan"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sell_buy_easily"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        </LinearLayout>


    </LinearLayout>

</ScrollView>