<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/jet"
    tools:context=".AdInsert">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/pinkpurple"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="30dp"
            android:text="@string/Enter_your_ads" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/particular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:checked="true"
                android:text="Offre" />

            <RadioButton
                android:id="@+id/pro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:text="Demande" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageArticle"
            android:layout_margin="16dp"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            />

        <Button
            android:id="@+id/buttonimage"
            android:layout_marginTop="75dp"
            android:layout_width="wrap_content"
            android:backgroundTint="@color/pinkpurple"
            android:layout_height="wrap_content"
            android:text="@string/Change_photo"
            />

        </LinearLayout>


        <EditText
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/white"
            android:hint="@string/Titre_ads"
            android:textColorHint="@color/grey"/>

        <EditText
            android:id="@+id/price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/white"
            android:hint="@string/Price_ads"
            android:textColorHint="@color/grey"/>

        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/white"
            android:textColorHint="@color/grey"
            android:hint="@string/Description_ads" />


    </LinearLayout>

    <Button
        android:id="@+id/add_ad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="60dp"
        android:text="Ajouter l'annonce"
        android:backgroundTint="@color/pinkpurple"
        android:textAllCaps="false"
        android:textColor="@color/white" />



</RelativeLayout>